Fixed css for dark mode

--- a/src/appStyle.css
+++ b/src/appStyle.css
@@ -1,22 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-	--background-color: #f5f5f5;
-	--background-color-alternative: #ffffff;
-	--text-color: #1c1616;
-	--primary-color: #f4b615;
-	--primary-color-contrast: #ffffff;
-	--disabled-color: #d9d9d9;
-	--disabled-color-contrast: #888888;
 	--font-family: "Nunito", sans-serif;
-
-	/*NotesColors*/
-	--note-red: #f28b82;
-	--note-pink: #fdcfe8;
-	--note-yellow: #fff475;
-	--note-green: #ccff90;
-	--note-blue: #aecbfa;
-	--note-purple: #d7aefb;
 }
 
 * {
@@ -25,7 +10,7 @@
 	box-sizing: border-box;
 }
 
-html[data-theme="light"] {
+html {
 	--background-color: #f5f5f5;
 	--background-color-alternative: #ffffff;
 	--text-color: #16181c;
